feat: ajustes
